--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "5.10.2",
     "@vercel/blob": "^2.0.0",
     "@vercel/postgres": "^0.5.1",
     "bcryptjs": "^2.4.3",
@@ -27,7 +27,7 @@
     "@types/react": "^18.2.45",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "prisma": "^5.10.2",
+    "prisma": "5.10.2",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
