--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@vercel/postgres": "^0.5.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^17.2.3",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,7 +28,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "prisma": "5.10.2",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
